# hypergraph-gpu-label-propagation

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  benchmark.pbs  benchmark.sh  build.sh  example.cpp
cmake/: CUDAOffload.cmake  FetchCXXOPTS.cmake  OpenMPOffload.cmake  SYCLOffload.cmake
data/: download.py
docs/: programmability_report.md
include/: argparse.hpp  hypergraph.hpp  utils.hpp
scripts/: README.md  extract_data.py  extract_metrics_cuda.py  run.sh
src/common/: argparse.cpp  hypergraph.cpp
src/cuda/: label_propagation_cuda.cu  label_propagation_cuda.hpp  main_cuda.cpp
src/kokkos/: CMakeLists.txt  label_propagation_kokkos.cpp  label_propagation_kokkos.hpp  main_kokkos.cpp
src/openmp/: CMakeLists.txt  label_propagation_openmp.cpp  label_propagation_openmp.hpp  main_openmp.cpp
src/sycl/: CMakeLists.txt  label_propagation_sycl.cpp  label_propagation_sycl.hpp  main_sycl.cpp  test.cpp
